# imac2-projetTUT

./: .env  .gitignore  Dockerfile  LICENSE  README.md  capsule_analyse.py  capsule_analysis.py  capsule_test.py  capsule_train.py  display_faces_capture.py  docker-compose.yml  extract_faces.py  extract_faces_dir.py  extract_faces_video.py  mesonet_analyse.py  mesonet_test.py  mesonet_train.py  package-lock.json  package.json
CapsuleForensics/: .gitignore  Dockerfile  capsule_analyse.py  capsule_test.py  capsule_train.py  requirements.txt
MesoNet/: .gitignore  mesonet_analyse.py
classifiers/: common_config.py  common_labels.py  common_prediction.py
classifiers/CapsuleForensics/: __init__.py  classify.py  model_big.py  requirements.txt  test.py  test_binary_ffpp.py  test_cgvsphoto.py  test_cgvsphoto_full.py  test_multiclass_detail_ffpp.py  test_multiclass_ffpp.py  test_replay_attack.py  test_vid_binary_ffpp.py  test_vid_multiclass_ffpp.py  train.py  train_binary_ffpp.py  train_cgvsphoto.py  train_multiclass_ffpp.py  train_replay_attack.py
classifiers/MesoNet/: classify.py
extract/: .gitignore  README.md  __init__.py  common_detection.py  common_face.py  common_face_detection.py  common_face_extraction.py  common_landmark_detection.py  common_utils.py  common_warping.py  dnn_detection.py  dnn_extraction.py  dnn_tracking_detection.py  dnn_tracking_extraction.py  example_extract_faces.py  face_extraction.py  feature_extraction.py  feature_warping.py  landmark_warping.py
extract/landmark_detection/: CMakeLists.txt  README.md  facemark.cpp  facemark.hpp  pyInterface.cpp  test.cpp  vec.cpp  vec.hpp
extract/module/: __init__.py  common_face.py  common_face_detection.py  common_landmark_detection.py  common_landmark_detection_alt.py  common_tracking.py  common_utils.py  dnn_detection.py  landmark_warping.py
extraction/: Dockerfile  extract_faces_dir.py  requirements.txt
fakedetection/: pom.xml
src/: .env  docker-compose.yml
src/CapsuleForensics/: Dockerfile  analyse.py  test.py  (+1 more)
(+145 files in other folders)
